# adeslas-interview

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01-data-cleaning.ipynb  02-feature-eng.ipynb  03-feature-selection-split.ipynb  03-feature-selection.ipynb  04-model.ipynb  ejercicio1.ipynb
src/utils/: data_cleaning.py  feature_selection.py  model_training.py  outlier_summary.py  text.py
